# sqawk

./: .gitignore  .replit  .sqawk_history  Cargo.toml  LICENSE  README.md  debug_create_table.rs  dialect_test.rs  test-dialects.rs  test_changes_command.txt  test_data.csv  test_output.csv  test_repl_commands.txt  test_schema_display.sql
.github/workflows/: TestingCI.yml
attached_assets/: Pasted--Finished-test-profile-unoptimized-debuginfo-target-s-in-0-07s-Running-unittests-src--1747438564872.txt  Pasted--RUST-BACKTRACE-1-cargo-test-Finished-test-profile-unoptimized-debuginfo-target-s-in-0-1-1746453900995.txt  Pasted-sqlite-explain-create-table-persons-name-text-age-int-addr-opcode-p1-p2-p3-p4-1747544893847.txt  Pasted-test-vm-tests-test-select-star-from-table-ok-test-vm-tests-test-select-literal-FAILED-te-1747573179030.txt
doc/: database.md  sql_reference.md  user_guide.md
src/: aggregate.rs  cli.rs  config.rs  csv_handler.rs  database.rs  debug_join.rs  delim_handler.rs  error.rs  executor_trait.rs  file_handler.rs  file_handler.rs.backup  file_handler_new.rs  file_manager.rs  join.rs  lib.rs  main.rs  repl.rs  sql_executor.rs  sql_executor.rs.backup  string_functions.rs  table.rs  test_parser.rs
src/vm/: bytecode.rs  compiler.rs  engine.rs  executor.rs  mod.rs  sql_executor.rs  tests.rs
tests/: aggregates.csv  aliases.csv  common.rs  comparison_tests.rs  integration_test.rs  manual_test.rs  mod.rs  test_helpers.rs
tests/advanced/: mod.rs
tests/aggregate/: mod.rs
tests/alias/: mod.rs
tests/basic/: mod.rs
tests/comparison/: mod.rs
tests/csv_handler/: mod.rs
tests/data/: animals.csv  boundaries.csv  categories.csv  commented.csv  contacts.txt  departments.csv  duplicates.csv  employees.tsv  malformed.csv  orders.csv  products.csv  products_with_prices.csv  sample.csv  users.csv
tests/delimiter/: mod.rs
tests/distinct/: mod.rs
tests/group_by/: mod.rs
tests/helpers/: mod.rs
tests/integration/: distinct_tests.rs  join_tests.rs  mod.rs  order_by_tests.rs  update_tests.rs
tests/join/: mod.rs
tests/join_on/: mod.rs
tests/limit_offset/: mod.rs
tests/order_by/: mod.rs
tests/repl/: commands.rs  mod.rs  sqlite_commands.rs  test_repl_from_file.rs
tests/string_functions/: mod.rs
tests/tmp/: README.md  create_table.sql  debug_create_table.rs  debug_sql.rs  dialect_test.rs  test-dialects.rs  test_exit_code.txt  test_input.txt  (+4 more)
(+1 files in other folders)
