[package]
name = "sqawk"
version = "0.1.1"
edition = "2021"
authors = ["Jeff Garzik <jgarzik@pobox.com>"]
description = "An SQL-based command-line tool for processing delimiter-separated files (CSV, TSV, etc.), inspired by awk"
license = "MIT"
repository = "https://github.com/jgarzik/sqawk"
homepage = "https://github.com/jgarzik/sqawk"
documentation = "https://github.com/jgarzik/sqawk"
readme = "README.md"
keywords = ["csv", "tsv", "sql", "delimited", "awk"]
categories = ["command-line-utilities", "database", "text-processing"]
# Minimum version of Rust required
rust-version = "1.65.0"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
sqlparser = "0.36"
csv = "1.2"
anyhow = "1.0"
thiserror = "1.0"
regex = "1.9"

rustyline = "15.0.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"

[[bin]]
name = "sqawk"
path = "src/main.rs"
